--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
         "@web/dev-server-esbuild": "^0.2.16",
         "rollup": "^2.60.1",
         "typescript": "^4.5.2"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/angabar/horizontal-scroller"
     }
 }
